Fix button wrapping

--- a/fe/src/app/components/side-menu/side-menu-item/side-menu-item.component.scss
+++ b/fe/src/app/components/side-menu/side-menu-item/side-menu-item.component.scss
@@ -10,6 +10,7 @@
     transition: all .25s;
     width: 150px;
     height: unset;
+    white-space: nowrap;
     &.closed {
         width: 0px;
         min-width: 0px;
